BugID: 50407 - "Collapse" toolbar doesn't work in narrow (1024x768) res
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@61992 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/extensions/wikia/WikiaBar/css/WikiaBar.scss
+++ b/extensions/wikia/WikiaBar/css/WikiaBar.scss
@@ -228,6 +228,7 @@ $animationSpeed: 200ms;
 		position: absolute;
 		right: 0;
 		width: 24px;
+		z-index: $zTop;
 	}
 }
 
